--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Instagram Clone</string>
+    <string name="app_name">Instagram</string>
+    <string name="Aaryan_Singh">Aaryan Singh</string>
 </resources>
