Added HomeActivity and LoginActivity empty

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="signup_page_statement">Already have an account? Log In</string>
     <string name="log_in">Log In</string>
     <string name="welcome_signup">Welcome!</string>
+    <string name="title_activity_home">HomeActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
